# fay-ticker

./: .gitignore  Makefile  README.md  Setup.hs  fay-ticker.cabal
examples/: TickerApp.css  TickerApp.hs  TickerApp.html  TickerApp.js  TickerAppDummy.hs
src/: CanvasAPI.hs  Geometry.hs  JSAPI.hs  JSApi.hs  Ref.hs  Ticker.hs  TickerTimeSerie.hs
test/: GeometryTest.hs  TestRunner.hs  TickerTimeSerieTest.hs
